completed models, added semantic ui

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -2,16 +2,52 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+
+
   {% block title%}
   <!-- Title goes here -->
   {% endblock %}
 </head>
+
 <body>
+  <div class="ui menu">
+    <div class="header item">
+      <i class="keyboard outline icon"></i>
+    </div>
+    <div class="right menu">
+      <a class="item">
+        Discover Parts
+      </a>
+      <a class="item">
+        Tips
+      </a>
+      <a class="item">
+        Sign in
+      </a>
+      <a class="item">
+        Sign up
+      </a>
+      <a class="item">
+        Sign out
+      </a>
+    </div>
+  </div>
   {% block content %}
   <!-- Content goes here -->
   {% endblock%}
+
+  <footer>
+    this is the footer
+  </footer>
+  <!-- scripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 </body>
+
 </html>
