--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -26,17 +26,25 @@
       <a class="item">
         Tips
       </a>
+
+    {% if user.is_authenticated %}
+      <a class="item" href="{% url 'profile' %}">
+        Profile
+      </a>
+      <a class="item" href="{% url 'logout' %}">
+        Sign out
+      </a>
+    {% else %}
       <a class="item">
         Sign in
       </a>
       <a class="item">
         Sign up
       </a>
-      <a class="item">
-        Sign out
-      </a>
+    {% endif %}
     </div>
   </div>
+
   {% block content %}
   <!-- Content goes here -->
   {% endblock%}
