--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,23 +27,43 @@
         Tips
       </a>
 
-    {% if user.is_authenticated %}
+      {% if user.is_authenticated %}
       <a class="item" href="{% url 'profile' %}">
         Profile
       </a>
       <a class="item" href="{% url 'logout' %}">
         Sign out
       </a>
-    {% else %}
-      <a class="item">
+      {% else %}
+      <a class="item" id="sign-in">
         Sign in
       </a>
-      <a class="item">
+      <a class="item" id="sign-up">
         Sign up
       </a>
-    {% endif %}
+      {% endif %}
     </div>
   </div>
+
+  <!-- log in/sign up modal -->
+  <div class="ui modal" id="signup-form">
+    <i class="close icon"></i>
+    <div class="header">
+      Sign In
+    </div>
+    <div>
+      <form action="{% url 'signup' %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        <div class="actions">
+          <input class="btn" type="submit" value="Signup">
+          <input type="hidden" name="next" value={{next}}>
+        </div>
+    </div>
+    </form>
+  </div>
+
 
   {% block content %}
   <!-- Content goes here -->
@@ -56,6 +76,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
+  <script src="{% static 'scripts/base.js' %}"></script>
 </body>
 
 </html>
