--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,7 +17,7 @@
 <body>
   <div class="ui menu">
     <div class="header item">
-      <i class="keyboard outline icon"></i>
+      <a href="{% url 'home' %}"><i class="keyboard outline icon"></i></a>
     </div>
     <div class="right menu">
       <a class="item">
@@ -35,7 +35,7 @@
         Sign out
       </a>
       {% else %}
-      <a class="item" id="sign-in">
+      <a class="item" id="login">
         Sign in
       </a>
       <a class="item" id="sign-up">
@@ -45,11 +45,29 @@
     </div>
   </div>
 
-  <!-- log in/sign up modal -->
+    <!-- log in modal -->
+    <div class="ui modal" id="login-form">
+      <i class="close icon"></i>
+      <div class="header">
+        Sign In
+      </div>
+      <div>
+        <form action="{% url 'login' %}" method="POST">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <div class="actions">
+            <input class="btn" type="submit" value="Signup">
+            <input type="hidden" name="next" value={{next}}>
+          </div>
+      </div>
+      </form>
+    </div>
+
+  <!-- sign up modal -->
   <div class="ui modal" id="signup-form">
     <i class="close icon"></i>
     <div class="header">
-      Sign In
+      Sign Up
     </div>
     <div>
       <form action="{% url 'signup' %}" method="POST">
@@ -63,7 +81,6 @@
     </div>
     </form>
   </div>
-
 
   {% block content %}
   <!-- Content goes here -->
