added django crispy forms

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>cute keebs homepage</h1>
+<img class="ui fluid image"
+  src="https://massdrop-s3.imgix.net/product-images/drop-mito-gmk-laser-custom-keycap-set/FP/Bs4OPkQQtqOfKsivmoNA_01.jpg?auto=format&fm=jpg&fit=fill&w=820&h=547&bg=f0f0f0&dpr=1&q=70"
+  alt="" srcset="">
 {% endblock %}
