--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,10 +21,10 @@
       <a href="{% url 'home' %}"><i class="keyboard outline icon"></i></a>
     </div>
     <div class="right menu">
-      <a class="item">
+      <a class="item" href="{% url 'discover' %}">
         Discover Parts
       </a>
-      <a class="item">
+      <a class="item" href="{% url 'tips' %}">
         Tips
       </a>
 
@@ -44,7 +45,7 @@
       {% endif %}
     </div>
   </div>
-
+  
     <!-- log in modal -->
     <div class="ui modal" id="login-form">
       <i class="close icon"></i>
@@ -54,7 +55,7 @@
       <div>
         <form action="{% url 'login' %}" method="POST">
           {% csrf_token %}
-          {{ form.as_p }}
+          {{ form |crispy }}
           <div class="actions">
             <input class="btn" type="submit" value="Signup">
             <input type="hidden" name="next" value={{next}}>
@@ -72,7 +73,7 @@
     <div>
       <form action="{% url 'signup' %}" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form |crispy }}
 
         <div class="actions">
           <input class="btn" type="submit" value="Signup">
