--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,4 +9,14 @@
 <img class="ui fluid image"
   src="https://massdrop-s3.imgix.net/product-images/drop-mito-gmk-laser-custom-keycap-set/FP/Bs4OPkQQtqOfKsivmoNA_01.jpg?auto=format&fm=jpg&fit=fill&w=820&h=547&bg=f0f0f0&dpr=1&q=70"
   alt="" srcset="">
+
+<div class="intro">
+  <h2>The one stop for all your personal keyboard tracking needs</h2>
+  <hr>
+  <h3>Sign up now to ...</h3>
+  <p>Keep track of your current keyboards</p>
+  <p>Keep track of multiple keyboard builds</p>
+  <p>Learn how to get started</p>
+  <p>Learn about different parts</p>
+</div>
 {% endblock %}
