--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,15 +11,16 @@
 
   <link rel="stylesheet" href="{% static 'css/home.css' %}">
 
-  {% block title%}
   <!-- Title goes here -->
+  {% block title%}
+
   {% endblock %}
 </head>
 
 <body>
   <div class="ui menu">
     <div class="header item">
-      <a class="logo" href="{% url 'home' %}"><i class="keyboard outline icon"></i> Keeb Dreams</a>
+      <a class="logo" href="{% url 'home' %}"><i class="keyboard outline icon"></i>Dream Keebs</a>
     </div>
     <div class="right menu">
       <a class="item" href="{% url 'discover' %}">
@@ -46,24 +47,34 @@
       {% endif %}
     </div>
   </div>
-  
-    <!-- log in modal -->
-    <div class="ui modal" id="login-form">
-      <i class="close icon"></i>
-      <div class="header">
-        Sign In
-      </div>
-      <div>
-        <form action="{% url 'login' %}" method="POST">
-          {% csrf_token %}
-          {{ form |crispy }}
-          <div class="actions">
-            <input class="btn" type="submit" value="Signup">
-            <input type="hidden" name="next" value={{next}}>
-          </div>
-      </div>
-      </form>
+
+  <!-- log in modal -->
+  <div class="ui modal" id="login-form">
+    <i class="close icon"></i>
+    <div class="header">
+      Sign In
     </div>
+    <div>
+      <form action="{% url 'login' %}" method="POST">
+        <!--           {% csrf_token %}
+          {{form.username.label}}
+          {{form.username}}
+          <br>
+          {{form.password1.label}}
+          {{form.password1}} -->
+        {% if login_error_message %}
+        <p> {{login_error_message}}</p>
+        {% endif %}
+        {% csrf_token %}
+        <input type="text" name="username" placeholder="Enter user name" required>
+        <input type="password" name="password" placeholder="Enter password" required>
+        <div class="actions">
+          <input class="btn" type="submit" value="Signup">
+          <input type="hidden" name="next" value={{next}}>
+        </div>
+    </div>
+    </form>
+  </div>
 
   <!-- sign up modal -->
   <div class="ui modal" id="signup-form">
@@ -74,8 +85,11 @@
     <div>
       <form action="{% url 'signup' %}" method="POST">
         {% csrf_token %}
-        {{ form |crispy }}
-
+        {% for field in form %}
+        {{field.label}}
+        {{field }}
+        <br>
+        {% endfor %}
         <div class="actions">
           <input class="btn" type="submit" value="Signup">
           <input type="hidden" name="next" value={{next}}>
@@ -84,13 +98,15 @@
     </form>
   </div>
 
-  {% block content %}
   <!-- Content goes here -->
+  {% block content %}
+
   {% endblock%}
 
   <footer>
-    this is the footer
+    Created 2020 by Michelle Tran
   </footer>
+
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
