--- a/main_app/templates/keyboard/show.html
+++ b/main_app/templates/keyboard/show.html
@@ -7,17 +7,15 @@
 {% block content %}
 <h1>{{keyboard.name}}</h1>
 
-
 <p>Case: {{keyboard.case}}</p>
 <p>Switch: {{keyboard.switch}}</p>
 <p>PCB: {{keyboard.pcb}}</p>
 <p>Stabilizer: {{keyboard.stabilizer}}</p>
 <p>Keycaps: {{keyboard.keycap}}</p>
 
-
 <p>Description: {{keyboard.description}}</p>
 
-<a>Edit</a>
+<a href="{% url 'edit_keyboard' keyboard.id %}">Edit</a>
 
 <form action="{% url 'keyboard_delete' keyboard.id %}" method="POST">
   {% csrf_token %}
