--- a/main_app/templates/keyboard/show.html
+++ b/main_app/templates/keyboard/show.html
@@ -7,11 +7,11 @@
 {% block content %}
 <h1>{{keyboard.name}}</h1>
 
-<p>Case: {{keyboard.case}}</p>
-<p>Switch: {{keyboard.switch}}</p>
-<p>PCB: {{keyboard.pcb}}</p>
-<p>Stabilizer: {{keyboard.stabilizer}}</p>
-<p>Keycaps: {{keyboard.keycap}}</p>
+<p>Case: {{keyboard.case.first}}</p>
+<p>Switch: {{keyboard.switch.first}}</p>
+<p>PCB: {{keyboard.pcb.first}}</p>
+<p>Stabilizer: {{keyboard.stabilizer.first}}</p>
+<p>Keycaps: {{keyboard.keycap.first}}</p>
 
 <p>Description: {{keyboard.description}}</p>
 
