all routes built out with some logic

--- a/main_app/templates/discover.html
+++ b/main_app/templates/discover.html
@@ -30,6 +30,7 @@
     </div>
   </a>
   {% endfor %}
+  <a href="{% url 'switches' %}">See more...</a>
 </div>
 
 <!-- Keycaps -->
@@ -42,6 +43,7 @@
     </div>
   </a>
   {% endfor %}
+  <a href="{% url 'keycaps' %}">See more...</a>
 </div>
 
 <!-- Stabilizers -->
@@ -54,6 +56,7 @@
     </div>
   </a>
   {% endfor %}
+  <a href="{% url 'stabilizers' %}">See more...</a>
 </div>
 
 <!-- PCBs -->
@@ -66,6 +69,7 @@
     </div>
   </a>
   {% endfor %}
+  <a href="{% url 'pcbs' %}">See more...</a>
 </div>
 
 {% endblock %}
