default images added for profile page

--- a/main_app/templates/keyboard/show.html
+++ b/main_app/templates/keyboard/show.html
@@ -8,6 +8,7 @@
 <h1>{{keyboard.name}}</h1>
 
 <p>Case: {{keyboard.case.first}}</p>
+<img src="{{keyboard.case.first.image}}" alt="" srcset="">
 <p>Switch: {{keyboard.switch.first}}</p>
 <p>PCB: {{keyboard.pcb.first}}</p>
 <p>Stabilizer: {{keyboard.stabilizer.first}}</p>
