--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<img class="ui fluid image"
+<img class="ui fluid image home"
   src="https://massdrop-s3.imgix.net/product-images/drop-mito-gmk-laser-custom-keycap-set/FP/Bs4OPkQQtqOfKsivmoNA_01.jpg?auto=format&fm=jpg&fit=fill&w=820&h=547&bg=f0f0f0&dpr=1&q=70"
   alt="" srcset="">
 
