--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -13,34 +13,36 @@
 <a class="ui teal button" href="{% url 'create_keyboard' %}">Create keyboard</a>
 
 <h3>Owned Keyboards</h3>
-<div class="owned-keyboards">
+<div class="keyboards">
   {% for keyboard in keyboards %}
   {% if keyboard.status == 'O' %}
   <div class="keyboard-card">
-    <a href="{% url 'show' keyboard.id %}" class="ui medium image">{{keyboard.name}}
+    <a href="{% url 'show' keyboard.id %}" class="ui medium image">
       {% if keyboard.keycap.first %}
       <img src="{{keyboard.keycap.first.image}}" alt="" srcset="">
       {% else %}
       <img src="https://assets3.razerzone.com/xpQLMA117pPRYZvkU17ddE-vLLk=/767x511/https%3A%2F%2Fhybrismediaprod.blob.core.windows.net%2Fsys-master-phoenix-images-container%2Fhe1%2Fh98%2F9011301384222%2Frazer-pbt-keycap-upgrade-set-mercury-white-gallery-hero-1500x1000.jpg" alt="" srcset="">
       {% endif %}
     </a>
+    <p>{{keyboard.name}}</p>
   </div>
   {% endif %}
   {% endfor %}
 </div>
 
 <h3>Dream Keyboards</h3>
-<div class="dream-keyboards">
+<div class="keyboards">
   {% for keyboard in keyboards %}
   {% if keyboard.status == 'B' %}
   <div class="keyboard-card">
-    <a href="{% url 'show' keyboard.id %}" class="ui medium image">{{keyboard.name}}
+    <a href="{% url 'show' keyboard.id %}" class="ui medium image">
       {% if keyboard.keycap.first %}
       <img src="{{keyboard.keycap.first.image}}" alt="" srcset="">
       {% else %}
       <img src="https://assets3.razerzone.com/xpQLMA117pPRYZvkU17ddE-vLLk=/767x511/https%3A%2F%2Fhybrismediaprod.blob.core.windows.net%2Fsys-master-phoenix-images-container%2Fhe1%2Fh98%2F9011301384222%2Frazer-pbt-keycap-upgrade-set-mercury-white-gallery-hero-1500x1000.jpg" alt="" srcset="">
       {% endif %}
     </a>
+    <p>{{keyboard.name}}</p>
   </div>
   {% endif %}
   {% endfor %}
