--- a/main_app/templates/keyboard/show.html
+++ b/main_app/templates/keyboard/show.html
@@ -15,18 +15,51 @@
   <img src="{{keyboard.keycap.first.image}}" alt="" srcset="">
 </div>
 
-<p>Case: {{keyboard.case.first}}</p>
-<p>Switch: {{keyboard.switch.first}}</p>
-<p>PCB: {{keyboard.pcb.first}}</p>
-<p>Stabilizer: {{keyboard.stabilizer.first}}</p>
-<p>Keycaps: {{keyboard.keycap.first}}</p>
+<h4 class="ui horizontal divider header">
+  <i class="tag icon"></i>
+  Description
+</h4>
+<p>{{keyboard.description}}</p>
 
-<p>Description: {{keyboard.description}}</p>
+<h4 class="ui horizontal divider header">
+  <i class="bar chart icon"></i>
+  Specifications
+</h4>
 
-<a class="ui teal button" href="{% url 'edit_keyboard' keyboard.id %}">Edit</a>
+<table class="ui definition table">
+  <tbody>
+    <tr>
+      <td class="two wide column">Case:</td>
+      <td>{{keyboard.case.first}}</td>
+    </tr>
+    <tr>
+      <td class="two wide column">Switch:</td>
+      <td>{{keyboard.switch.first}}</td>
+    </tr>
+    <tr>
+      <td class="two wide column">PCB:</td>
+      <td>{{keyboard.pcb.first}}</td>
+    </tr>
+    <tr>
+      <td class="two wide column">Stabilizer:</td>
+      <td>{{keyboard.stabilizer.first}}</td>
+    </tr>
+    <tr>
+      <td class="two wide column">Keycap:</td>
+      <td>{{keyboard.keycap.first}}</td>
+    </tr>
+  </tbody>
+</table>
 
-<form action="{% url 'keyboard_delete' keyboard.id %}" method="POST">
-  {% csrf_token %}
-  <button class="ui teal button" type="submit">Delete</button>
-</form>
+<div class="buttons">
+  <div>
+    <a class="ui teal button" href="{% url 'edit_keyboard' keyboard.id %}">Edit</a>
+  </div>
+  <div>
+    <form action="{% url 'keyboard_delete' keyboard.id %}" method="POST">
+      {% csrf_token %}
+      <button class="ui teal button" type="submit">Delete</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
