--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -105,9 +105,11 @@
 
   {% endblock%}
 
-  <footer>
-    Created 2020 by Michelle Tran
-  </footer>
+  <div class="footer">
+    <footer>
+      Created 2020 by Michelle Tran
+    </footer>
+  </div>
 
   <!-- scripts -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
