more styling to the discover page

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,7 +24,7 @@
     </div>
     <div class="right menu">
       <a class="item" href="{% url 'discover' %}">
-        Discover Parts
+        Discover
       </a>
       <a class="item" href="{% url 'tips' %}">
         Tips
